--- a/estilos/partials/_main.scss
+++ b/estilos/partials/_main.scss
@@ -7,48 +7,63 @@
     flex-direction: column;
     justify-content: space-between;
 }
+#body_wok{
+    background-image: url(/imagenes/fondo5.png);
+    background-repeat: no-repeat;
+    background-size: 500px;
+    background-position: 0% 300%;
 
-.menu-main{
-    width: 100%;
-    padding: 1.5rem;
 }
 
+.menu-main{
+    width: 500px;
+    padding: 1.5rem;
+    }
+
 .menu-carta{
-    margin-inline: 3px;
     padding: 1rem;
     width: 100%;
-    background-color: #caf4e1d8;
-    background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23070707' fill-opacity='0.11'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-between;
-    border-radius: 5%;
 
     .menu-titulo{
         display: flex;
         justify-content: center;
-        
+        align-items: center;
+            
         h2{
-            font-size: 1.5em;
+            text-transform: uppercase;
+            text-rendering: optimizeLegibility;
+            font-weight: bold; 
+            font-size: 35px; 
+            background: #202020; 
+            -webkit-background-clip: text; 
+            -moz-background-clip: text; 
+            background-clip: text; 
+            color: transparent; 
+            text-shadow: 0px 3px 3px rgba(255,255,255,0.4),0px -1px 1px rgba(0,0,0,0.3);
         }
     }
     
     .grafitti{
-        background-color: $Color4;
-        border: 2px outset $Color3;
+        background-color: $Color1;
         color: white;
         display: flex;
         justify-content: space-around;
         align-items: center;
+        border-radius: 50px;
+        box-shadow:  20px 20px 60px #bebebe,
+                    -20px -20px 60px #ffffff;
     }
 
     .precio{
         width: 70px;
-        height: 40px;
+        height: 35px;
         background-color: #401A39;
         color: whitesmoke;
-        border-radius: 50%;
+        border-radius: 79px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -58,7 +73,7 @@
 
 /*pagina sushi & Bowls*/
 #body_sushi{
-    background-color: $Color3;
+    background-color: $Color2;
 
     .sushi_borde{
         display: flex;
@@ -70,27 +85,157 @@
         font-size: 1.5em;
     }
 }
+.sushi_imagen{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    padding: 5px;
+    background-color: $Color1;
+    border-radius: 0.8em;
+
+    img{
+        width: 100%; 
+        border-radius: 0.8em; 
+    }
+}
 /*pagina rolls*/
 #body_rolls{
     background-color: $Color5;
+    background-image: url(/imagenes/logo\ fondo.png);
+    background-size: 500px;
+    background-repeat: no-repeat;
+    background-position: 95% 1150%;
 
-    b{
-        font-size: 1.2em;
+    h2{
+        pre{
+            text-transform: uppercase;
+            text-rendering: optimizeLegibility;
+            font-weight: bold; 
+            font-size: 35px; 
+            background: #202020; 
+            -webkit-background-clip: text; 
+            -moz-background-clip: text; 
+            background-clip: text; 
+            color: transparent; 
+            text-shadow: 0px 3px 3px rgba(255,255,255,0.4),0px -1px 1px rgba(0,0,0,0.3);
+        }
     }
 
     .hot_roll{
+        margin: 5px;
         background-color: orangered;
         color: whitesmoke;
+        padding: 5px;
+        border-radius: 0.8em;
     }
-
     .salsa_wasabi{
-        background-color: $Color4;
-        border-radius: 10%;
+        background-color: $Color5;
+        border-radius: 0.8em;
+        padding-top: 10px;
+        margin: 3px;
+    }
+    .precio2{
+        pre{
+            width: 100%;
+            height: 35px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #401A39;
+            color: whitesmoke;
+            border-radius: 79px;
+            padding: 3px;
+        };
+        
     }
 }
+.imagen_rol{
+    margin: 20px;
+    padding: 10px;
+    border-radius: 0.8em;
+
+    img{
+        width: 450px;
+        border-radius: 0.8em;
+    }
+    }
 /*fin paginas rolls*/
 /*inicio conocenos*/
 #menu_conocenos{
     background-color: $Color4;
-}
+
+    .fb-page{
+        margin-top: 20px;
+    }
+
+    #mapa{
+        margin-top: 25px;
+    }
+    }
+/*cuadrado instagram*/
+.card {
+    --bg: #0a0a0acb;
+    --hover-bg: #FFE5F4;
+    --hover-text: #E50087;
+    color: whitesmoke;
+    max-width: 500px;
+    text-align: center;
+    background: var(--bg);
+    margin: 10px;
+    padding: 1.5em;
+    padding-block: 1.8em;
+    border-radius: 5px;
+    position: relative;
+    overflow: hidden;
+    transition: .3s cubic-bezier(.6,.4,0,1),transform .15s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+  }
+
+  .card__body {
+    color: $Color4;
+    line-height: 1.5em;
+    font-size: 1em;
+  }
+  
+  .card > :not(span) {
+    transition: .3s cubic-bezier(.6,.4,0,1);
+  }
+  
+  .card > strong {
+    display: block;
+    font-size: 1.4rem;
+    letter-spacing: -.035em;
+  }
+  
+  .card span {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--hover-text);
+    border-radius: 5px;
+    font-weight: bold;
+    top: 100%;
+    transition: all .3s cubic-bezier(.6,.4,0,1);
+  }
+  
+  .card:hover span {
+    top: 0;
+    font-size: 1.2em;
+  }
+  
+  .card:hover {
+    background: var(--hover-bg);
+  }
+  
+  .card:hover>div,.card:hover>strong {
+    opacity: 0;
+  }
 
