--- a/estilos/estilo.scss
+++ b/estilos/estilo.scss
@@ -1,3 +1,4 @@
+@import "../estilos/partials/media-queries";
 @import "../estilos/partials/variables";
 @import "../estilos/partials/reset";
 @import "../estilos/partials/index";
