--- a/estilos/partials/_footer.scss
+++ b/estilos/partials/_footer.scss
@@ -20,6 +20,19 @@
     justify-content: space-between;
     align-items: center;
 
+    @include mobile {
+        padding: 1px;
+    }
+
+    h3{
+        font-size: 15px;
+        margin-bottom: 3px;
+
+        @include mobile {
+            font-size: 10px;
+        }
+    }
+
     .iconos-redes{
         display: flex;
         flex-direction: row;
@@ -28,6 +41,10 @@
         align-items: center;
         list-style-type: none;
         gap: 1rem;
+
+        @include mobile {
+            gap: 0.5rem;
+        }
         }
 
         .instagram{
@@ -35,12 +52,20 @@
                 text-decoration: none;
                 color: black;
                 font-size: 45px;
+
+                @include mobile {
+                    font-size: 18px;
+                }
             }
         }
 
 
     ul>li>i{
-        font-size: 30px;
+            font-size: 30px;
+            
+            @include mobile {
+                font-size: 18px;
+            }
         }
 
 
@@ -50,6 +75,10 @@
 #logo_foot{
     img{
         width: 150px;
+
+        @include mobile {
+            width: 100px;
+        }
     }
     
 }
