--- a/estilos/partials/_footer.scss
+++ b/estilos/partials/_footer.scss
@@ -8,6 +8,10 @@
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
+
+    @include mobile {
+        padding: 5px;
+    }
 }
 /*diseño redes*/
 .redes{
@@ -18,15 +22,16 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
 
     @include mobile {
         padding: 1px;
+        margin-top: 3px; ;
     }
 
     h3{
         font-size: 15px;
-        margin-bottom: 3px;
+        margin-bottom: 10px;
 
         @include mobile {
             font-size: 10px;
@@ -43,7 +48,15 @@
         gap: 1rem;
 
         @include mobile {
-            gap: 0.5rem;
+            gap: 0.9rem;
+        }
+
+        pre{
+            font-size: 15px;
+
+            @include mobile {
+                font-size: 9px;
+            }
         }
         }
 
@@ -77,7 +90,7 @@
         width: 150px;
 
         @include mobile {
-            width: 100px;
+            width: 80px;
         }
     }
     
