--- a/estilos/partials/_main.scss
+++ b/estilos/partials/_main.scss
@@ -13,6 +13,11 @@
     background-size: 500px;
     background-position: 0% 300%;
 
+    @include mobile {
+        background-size: 300px;
+        background-position: 15% 250%;
+    }
+
 }
 
 .menu-main{
@@ -44,6 +49,10 @@
             background-clip: text; 
             color: transparent; 
             text-shadow: 0px 3px 3px rgba(255,255,255,0.4),0px -1px 1px rgba(0,0,0,0.3);
+
+            @include mobile {
+                font-size: 25px;
+            }
         }
     }
     
@@ -56,6 +65,10 @@
         border-radius: 50px;
         box-shadow:  20px 20px 60px #bebebe,
                     -20px -20px 60px #ffffff;
+
+        @include mobile {
+            font-size: 13px;
+        }
     }
 
     .precio{
@@ -67,6 +80,12 @@
         display: flex;
         justify-content: center;
         align-items: center;
+
+        @include mobile {
+            width: 50px;
+            height: 30px;
+            font-size: 13px;
+        }
     
     }
 }
